gcc/testsuite/g++.dg/modules/atom-decl-3.C
// { dg-options "-fmodules-atom" }

int i; // { dg_message "ended here" }
import baz; // { dg-error "must be within module preamble" }

